--- a/personal-portfolio/Personal Website/assets/css/style.css
+++ b/personal-portfolio/Personal Website/assets/css/style.css
@@ -875,7 +875,7 @@ main {
   #PORTFOLIO
 \*-----------------------------------*/
 
-.filter-list { display: none; }
+.filter-list { display: block; }
 
 .filter-select-box {
   position: relative;
@@ -939,7 +939,7 @@ main {
   margin-bottom: 10px;
 }
 
-.project-item { display: none; }
+.project-item { display: block;}
 
 .project-item.active {
   display: block;
